@@ -20,7 +20,8 @@ import java.io.BufferedInputStream;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.URLEncoder;
 import java.nio.channels.FileChannel;
@@ -29,10 +30,10 @@ import java.util.regex.Pattern;
 import org.apache.tools.ant.BuildException;
 
 /**
- * Ant task that implements the <code>/deploy</code> command, supported by the
- * Tomcat manager application.
+ * Ant task that implements the <code>/deploy</code> command, supported by the Tomcat manager application.
  *
  * @author Craig R. McClanahan
+ *
  * @since 4.1
  */
 public class DeployTask extends AbstractCatalinaCommandTask {
@@ -54,8 +55,7 @@ public class DeployTask extends AbstractCatalinaCommandTask {
 
 
     /**
-     * URL of the server local web application archive (WAR) file to be
-     * deployed.
+     * URL of the server local web application archive (WAR) file to be deployed.
      */
     protected String localWar = null;
 
@@ -122,8 +122,7 @@ public class DeployTask extends AbstractCatalinaCommandTask {
             throw new BuildException("Must specify 'path' attribute");
         }
         if ((war == null) && (localWar == null) && (config == null) && (tag == null)) {
-            throw new BuildException(
-                            "Must specify either 'war', 'localWar', 'config', or 'tag' attribute");
+            throw new BuildException("Must specify either 'war', 'localWar', 'config', or 'tag' attribute");
         }
         // Building an input stream on the WAR to upload, if any
         BufferedInputStream stream = null;
@@ -132,15 +131,15 @@ public class DeployTask extends AbstractCatalinaCommandTask {
         if (war != null) {
             if (PROTOCOL_PATTERN.matcher(war).lookingAt()) {
                 try {
-                    URL url = new URL(war);
-                    URLConnection conn = url.openConnection();
+                    URI uri = new URI(war);
+                    URLConnection conn = uri.toURL().openConnection();
                     contentLength = conn.getContentLengthLong();
                     stream = new BufferedInputStream(conn.getInputStream(), 1024);
-                } catch (IOException e) {
+                } catch (IOException | URISyntaxException e) {
                     throw new BuildException(e);
                 }
             } else {
-                FileInputStream fsInput= null;
+                FileInputStream fsInput = null;
                 try {
                     fsInput = new FileInputStream(war);
                     FileChannel fsChannel = fsInput.getChannel();
