@@ -20,12 +20,10 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -41,19 +39,18 @@ import jakarta.servlet.ServletOutputStream;
 import jakarta.servlet.ServletResponse;
 import jakarta.servlet.SessionTrackingMode;
 import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpServletResponseWrapper;
 
 import org.apache.catalina.Context;
 import org.apache.catalina.Session;
-import org.apache.catalina.security.SecurityUtil;
 import org.apache.catalina.util.SessionConfig;
 import org.apache.coyote.ActionCode;
 import org.apache.coyote.ContinueResponseTiming;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
 import org.apache.tomcat.util.buf.CharChunk;
+import org.apache.tomcat.util.buf.CharsetHolder;
 import org.apache.tomcat.util.buf.UEncoder;
 import org.apache.tomcat.util.buf.UEncoder.SafeCharsSet;
 import org.apache.tomcat.util.buf.UriUtil;
@@ -76,49 +73,10 @@ public class Response implements HttpServletResponse {
 
     private static final MediaTypeCache MEDIA_TYPE_CACHE = new MediaTypeCache(100);
 
-    // ----------------------------------------------------- Instance Variables
-
-    public Response() {
-        this(OutputBuffer.DEFAULT_BUFFER_SIZE);
-    }
-
-
-    public Response(int outputBufferSize) {
-        outputBuffer = new OutputBuffer(outputBufferSize);
-    }
-
-
-    // ------------------------------------------------------------- Properties
-
     /**
      * Coyote response.
      */
-    protected org.apache.coyote.Response coyoteResponse;
-
-    /**
-     * Set the Coyote response.
-     *
-     * @param coyoteResponse The Coyote response
-     */
-    public void setCoyoteResponse(org.apache.coyote.Response coyoteResponse) {
-        this.coyoteResponse = coyoteResponse;
-        outputBuffer.setResponse(coyoteResponse);
-    }
-
-    /**
-     * @return the Coyote response.
-     */
-    public org.apache.coyote.Response getCoyoteResponse() {
-        return this.coyoteResponse;
-    }
-
-
-    /**
-     * @return the Context within which this Request is being processed.
-     */
-    public Context getContext() {
-        return request.getContext();
-    }
+    protected final org.apache.coyote.Response coyoteResponse;
 
 
     /**
@@ -181,24 +139,43 @@ public class Response implements HttpServletResponse {
     protected final CharChunk redirectURLCC = new CharChunk();
 
 
-    /*
-     * Not strictly required but it makes generating HTTP/2 push requests a lot
-     * easier if these are retained until the response is recycled.
-     */
-    private final List<Cookie> cookies = new ArrayList<>();
-
     private HttpServletResponse applicationResponse = null;
+
+
+    public Response(org.apache.coyote.Response coyoteResponse) {
+        this(coyoteResponse, OutputBuffer.DEFAULT_BUFFER_SIZE);
+    }
+
+
+    public Response(org.apache.coyote.Response coyoteResponse, int outputBufferSize) {
+        this.coyoteResponse = coyoteResponse;
+        outputBuffer = new OutputBuffer(outputBufferSize, coyoteResponse);
+    }
 
 
     // --------------------------------------------------------- Public Methods
 
     /**
-     * Release all object references, and initialize instance variables, in
-     * preparation for reuse of this object.
+     * @return the Coyote response.
+     */
+    public org.apache.coyote.Response getCoyoteResponse() {
+        return this.coyoteResponse;
+    }
+
+
+    /**
+     * @return the Context within which this Request is being processed.
+     */
+    public Context getContext() {
+        return request.getContext();
+    }
+
+
+    /**
+     * Release all object references, and initialize instance variables, in preparation for reuse of this object.
      */
     public void recycle() {
 
-        cookies.clear();
         outputBuffer.recycle();
         usingOutputStream = false;
         usingWriter = false;
@@ -227,17 +204,11 @@ public class Response implements HttpServletResponse {
     }
 
 
-    public List<Cookie> getCookies() {
-        return cookies;
-    }
-
-
     // ------------------------------------------------------- Response Methods
 
     /**
-     * @return the number of bytes the application has actually written to the
-     * output stream. This excludes chunking, compression, etc. as well as
-     * headers.
+     * @return the number of bytes the application has actually written to the output stream. This excludes chunking,
+     *             compression, etc. as well as headers.
      */
     public long getContentWritten() {
         return outputBuffer.getContentWritten();
@@ -245,8 +216,9 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the number of bytes the actually written to the socket. This
-     * includes chunking, compression, etc. but excludes headers.
+     * @return the number of bytes the actually written to the socket. This includes chunking, compression, etc. but
+     *             excludes headers.
+     *
      * @param flush if <code>true</code> will perform a buffer flush first
      */
     public long getBytesWritten(boolean flush) {
@@ -276,9 +248,8 @@ public class Response implements HttpServletResponse {
      * @return <code>true</code> if the application has committed the response
      */
     public boolean isAppCommitted() {
-        return this.appCommitted || isCommitted() || isSuspended()
-                || ((getContentLength() > 0)
-                    && (getContentWritten() >= getContentLength()));
+        return this.appCommitted || isCommitted() || isSuspended() ||
+                ((getContentLength() > 0) && (getContentWritten() >= getContentLength()));
     }
 
 
@@ -290,7 +261,7 @@ public class Response implements HttpServletResponse {
     /**
      * @return the Request with which this Response is associated.
      */
-    public org.apache.catalina.connector.Request getRequest() {
+    public Request getRequest() {
         return this.request;
     }
 
@@ -299,7 +270,7 @@ public class Response implements HttpServletResponse {
      *
      * @param request The new associated request
      */
-    public void setRequest(org.apache.catalina.connector.Request request) {
+    public void setRequest(Request request) {
         this.request = request;
     }
 
@@ -311,8 +282,7 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the <code>ServletResponse</code> for which this object
-     * is the facade.
+     * @return the <code>ServletResponse</code> for which this object is the facade.
      */
     public HttpServletResponse getResponse() {
         if (facade == null) {
@@ -326,13 +296,10 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Set a wrapped HttpServletResponse to pass to the application. Components
-     * wishing to wrap the response should obtain the response via
-     * {@link #getResponse()}, wrap it and then call this method with the
-     * wrapped response.
+     * Set a wrapped HttpServletResponse to pass to the application. Components wishing to wrap the response should
+     * obtain the response via {@link #getResponse()}, wrap it and then call this method with the wrapped response.
      *
-     * @param applicationResponse The wrapped response to pass to the
-     *        application
+     * @param applicationResponse The wrapped response to pass to the application
      */
     public void setResponse(HttpServletResponse applicationResponse) {
         // Check the wrapper wraps this request
@@ -378,12 +345,10 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Set the error flag.
-     *
-     * @return <code>false</code> if the error flag was already set
+     * Set the error flag if not already set.
      */
-    public boolean setError() {
-        return getCoyoteResponse().setError();
+    public void setError() {
+        getCoyoteResponse().setError();
     }
 
 
@@ -407,9 +372,13 @@ public class Response implements HttpServletResponse {
     }
 
 
+    public void resetError() {
+        getCoyoteResponse().resetError();
+    }
+
+
     /**
-     * Perform whatever actions are required to flush and close the output
-     * stream or writer, in a single operation.
+     * Perform whatever actions are required to flush and close the output stream or writer, in a single operation.
      *
      * @exception IOException if an input/output error occurs
      */
@@ -427,10 +396,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * @return the content type that was set or calculated for this response,
-     * or <code>null</code> if no content type was set.
-     */
     @Override
     public String getContentType() {
         return getCoyoteResponse().getContentType();
@@ -438,14 +403,12 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Return a PrintWriter that can be used to render error messages,
-     * regardless of whether a stream or writer has already been acquired.
+     * Return a PrintWriter that can be used to render error messages, regardless of whether a stream or writer has
+     * already been acquired.
      *
-     * @return Writer which can be used for error reports. If the response is
-     * not an error report returned using sendError or triggered by an
-     * unexpected exception thrown during the servlet processing
-     * (and only in that case), null will be returned if the response stream
-     * has already been used.
+     * @return Writer which can be used for error reports. If the response is not an error report returned using
+     *             sendError or triggered by an unexpected exception thrown during the servlet processing (and only in
+     *             that case), null will be returned if the response stream has already been used.
      *
      * @exception IOException if an input/output error occurs
      */
@@ -465,64 +428,41 @@ public class Response implements HttpServletResponse {
     // ------------------------------------------------ ServletResponse Methods
 
 
-    /**
-     * Flush the buffer and commit this response.
-     *
-     * @exception IOException if an input/output error occurs
-     */
     @Override
     public void flushBuffer() throws IOException {
         outputBuffer.flush();
     }
 
 
-    /**
-     * @return the actual buffer size used for this Response.
-     */
     @Override
     public int getBufferSize() {
         return outputBuffer.getBufferSize();
     }
 
 
-    /**
-     * @return the character encoding used for this Response.
-     */
     @Override
     public String getCharacterEncoding() {
-        String charset = getCoyoteResponse().getCharacterEncoding();
-        if (charset != null) {
-            return charset;
+        String charset = getCoyoteResponse().getCharsetHolder().getName();
+        if (charset == null) {
+            Context context = getContext();
+            if (context != null) {
+                charset = context.getResponseCharacterEncoding();
+            }
         }
 
-        Context context = getContext();
-        String result = null;
-        if (context != null) {
-            result =  context.getResponseCharacterEncoding();
+        if (charset == null) {
+            charset = org.apache.coyote.Constants.DEFAULT_BODY_CHARSET.name();
         }
 
-        if (result == null) {
-            result = org.apache.coyote.Constants.DEFAULT_BODY_CHARSET.name();
-        }
-
-        return result;
+        return charset;
     }
 
 
-    /**
-     * @return the servlet output stream associated with this Response.
-     *
-     * @exception IllegalStateException if <code>getWriter</code> has
-     *  already been called for this response
-     * @exception IOException if an input/output error occurs
-     */
     @Override
-    public ServletOutputStream getOutputStream()
-        throws IOException {
+    public ServletOutputStream getOutputStream() throws IOException {
 
         if (usingWriter) {
-            throw new IllegalStateException
-                (sm.getString("coyoteResponse.getOutputStream.ise"));
+            throw new IllegalStateException(sm.getString("coyoteResponse.getOutputStream.ise"));
         }
 
         usingOutputStream = true;
@@ -534,43 +474,27 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * @return the Locale assigned to this response.
-     */
     @Override
     public Locale getLocale() {
         return getCoyoteResponse().getLocale();
     }
 
 
-    /**
-     * @return the writer associated with this Response.
-     *
-     * @exception IllegalStateException if <code>getOutputStream</code> has
-     *  already been called for this response
-     * @exception IOException if an input/output error occurs
-     */
     @Override
-    public PrintWriter getWriter()
-        throws IOException {
+    public PrintWriter getWriter() throws IOException {
 
         if (usingOutputStream) {
-            throw new IllegalStateException
-                (sm.getString("coyoteResponse.getWriter.ise"));
+            throw new IllegalStateException(sm.getString("coyoteResponse.getWriter.ise"));
         }
 
         if (request.getConnector().getEnforceEncodingInGetWriter()) {
             /*
-             * If the response's character encoding has not been specified as
-             * described in <code>getCharacterEncoding</code> (i.e., the method
-             * just returns the default value <code>ISO-8859-1</code>),
-             * <code>getWriter</code> updates it to <code>ISO-8859-1</code>
-             * (with the effect that a subsequent call to getContentType() will
-             * include a charset=ISO-8859-1 component which will also be
-             * reflected in the Content-Type response header, thereby satisfying
-             * the Servlet spec requirement that containers must communicate the
-             * character encoding used for the servlet response's writer to the
-             * client).
+             * If the response's character encoding has not been specified as described in
+             * <code>getCharacterEncoding</code> (i.e., the method just returns the default value
+             * <code>ISO-8859-1</code>), <code>getWriter</code> updates it to <code>ISO-8859-1</code> (with the effect
+             * that a subsequent call to getContentType() will include a charset=ISO-8859-1 component which will also be
+             * reflected in the Content-Type response header, thereby satisfying the Servlet spec requirement that
+             * containers must communicate the character encoding used for the servlet response's writer to the client).
              */
             setCharacterEncoding(getCharacterEncoding());
         }
@@ -584,23 +508,12 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Has the output of this response already been committed?
-     *
-     * @return <code>true</code> if the response has been committed
-     */
     @Override
     public boolean isCommitted() {
         return getCoyoteResponse().isCommitted();
     }
 
 
-    /**
-     * Clear any content written to the buffer.
-     *
-     * @exception IllegalStateException if this response has already
-     *  been committed
-     */
     @Override
     public void reset() {
         // Ignore any call from an included servlet
@@ -616,12 +529,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Reset the data buffer but not any status or header information.
-     *
-     * @exception IllegalStateException if the response has already
-     *  been committed
-     */
     @Override
     public void resetBuffer() {
         resetBuffer(false);
@@ -629,26 +536,23 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Reset the data buffer and the using Writer/Stream flags but not any
-     * status or header information.
+     * Reset the data buffer and the using Writer/Stream flags but not any status or header information.
      *
-     * @param resetWriterStreamFlags <code>true</code> if the internal
-     *        <code>usingWriter</code>, <code>usingOutputStream</code>,
-     *        <code>isCharacterEncodingSet</code> flags should also be reset
+     * @param resetWriterStreamFlags <code>true</code> if the internal <code>usingWriter</code>,
+     *                                   <code>usingOutputStream</code>, <code>isCharacterEncodingSet</code> flags
+     *                                   should also be reset
      *
-     * @exception IllegalStateException if the response has already
-     *  been committed
+     * @exception IllegalStateException if the response has already been committed
      */
     public void resetBuffer(boolean resetWriterStreamFlags) {
 
         if (isCommitted()) {
-            throw new IllegalStateException
-                (sm.getString("coyoteResponse.resetBuffer.ise"));
+            throw new IllegalStateException(sm.getString("coyoteResponse.resetBuffer.ise"));
         }
 
         outputBuffer.reset(resetWriterStreamFlags);
 
-        if(resetWriterStreamFlags) {
+        if (resetWriterStreamFlags) {
             usingOutputStream = false;
             usingWriter = false;
             isCharacterEncodingSet = false;
@@ -657,20 +561,11 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the buffer size to be used for this Response.
-     *
-     * @param size The new buffer size
-     *
-     * @exception IllegalStateException if this method is called after
-     *  output has been committed for this response
-     */
     @Override
     public void setBufferSize(int size) {
 
         if (isCommitted() || !outputBuffer.isNew()) {
-            throw new IllegalStateException
-                (sm.getString("coyoteResponse.setBufferSize.ise"));
+            throw new IllegalStateException(sm.getString("coyoteResponse.setBufferSize.ise"));
         }
 
         outputBuffer.setBufferSize(size);
@@ -678,11 +573,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the content length (in bytes) for this Response.
-     *
-     * @param length The new content length
-     */
     @Override
     public void setContentLength(int length) {
 
@@ -705,11 +595,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the content type for this Response.
-     *
-     * @param type The new content type
-     */
     @Override
     public void setContentType(String type) {
 
@@ -724,11 +609,7 @@ public class Response implements HttpServletResponse {
 
         if (type == null) {
             getCoyoteResponse().setContentType(null);
-            try {
-                getCoyoteResponse().setCharacterEncoding(null);
-            } catch (UnsupportedEncodingException e) {
-                // Can never happen when calling with null
-            }
+            getCoyoteResponse().setCharsetHolder(CharsetHolder.EMPTY);
             isCharacterEncodingSet = false;
             return;
         }
@@ -754,8 +635,9 @@ public class Response implements HttpServletResponse {
 
             // Ignore charset if getWriter() has already been called
             if (!usingWriter) {
+                getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(m[1]));
                 try {
-                    getCoyoteResponse().setCharacterEncoding(m[1]);
+                    getCoyoteResponse().getCharsetHolder().validate();
                 } catch (UnsupportedEncodingException e) {
                     log.warn(sm.getString("coyoteResponse.encoding.invalid", m[1]), e);
                 }
@@ -766,15 +648,8 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Overrides the name of the character encoding used in the body
-     * of the request. This method must be called prior to reading
-     * request parameters or reading input using getReader().
-     *
-     * @param charset String containing the name of the character encoding.
-     */
     @Override
-    public void setCharacterEncoding(String charset) {
+    public void setCharacterEncoding(String encoding) {
 
         if (isCommitted()) {
             return;
@@ -791,12 +666,40 @@ public class Response implements HttpServletResponse {
             return;
         }
 
+        getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(encoding));
         try {
-            getCoyoteResponse().setCharacterEncoding(charset);
+            getCoyoteResponse().getCharsetHolder().validate();
         } catch (UnsupportedEncodingException e) {
-            log.warn(sm.getString("coyoteResponse.encoding.invalid", charset), e);
+            log.warn(sm.getString("coyoteResponse.encoding.invalid", encoding), e);
             return;
         }
+        if (encoding == null) {
+            isCharacterEncodingSet = false;
+        } else {
+            isCharacterEncodingSet = true;
+        }
+    }
+
+
+    @Override
+    public void setCharacterEncoding(Charset charset) {
+
+        if (isCommitted()) {
+            return;
+        }
+
+        // Ignore any call from an included servlet
+        if (included) {
+            return;
+        }
+
+        // Ignore any call made after the getWriter has been invoked
+        // The default should be used
+        if (usingWriter) {
+            return;
+        }
+
+        getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(charset));
         if (charset == null) {
             isCharacterEncodingSet = false;
         } else {
@@ -805,12 +708,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the Locale that is appropriate for this response, including
-     * setting the appropriate character encoding.
-     *
-     * @param locale The new locale
-     */
     @Override
     public void setLocale(Locale locale) {
 
@@ -836,11 +733,7 @@ public class Response implements HttpServletResponse {
         }
 
         if (locale == null) {
-            try {
-                getCoyoteResponse().setCharacterEncoding(null);
-            } catch (UnsupportedEncodingException e) {
-                // Impossible when calling with null
-            }
+            getCoyoteResponse().setCharsetHolder(CharsetHolder.EMPTY);
         } else {
             // In some error handling scenarios, the context is unknown
             // (e.g. a 404 when a ROOT context is not present)
@@ -848,8 +741,9 @@ public class Response implements HttpServletResponse {
             if (context != null) {
                 String charset = context.getCharset(locale);
                 if (charset != null) {
+                    getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(charset));
                     try {
-                        getCoyoteResponse().setCharacterEncoding(charset);
+                        getCoyoteResponse().getCharsetHolder().validate();
                     } catch (UnsupportedEncodingException e) {
                         log.warn(sm.getString("coyoteResponse.encoding.invalid", charset), e);
                     }
@@ -893,8 +787,7 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the error message that was set with <code>sendError()</code>
-     * for this Response.
+     * @return the error message that was set with <code>sendError()</code> for this Response.
      */
     public String getMessage() {
         return getCoyoteResponse().getMessage();
@@ -910,8 +803,7 @@ public class Response implements HttpServletResponse {
     // -------------------------------------------- HttpServletResponse Methods
 
     /**
-     * Add the specified Cookie to those that will be included with
-     * this Response.
+     * Add the specified Cookie to those that will be included with this Response.
      *
      * @param cookie Cookie to be added
      */
@@ -923,16 +815,13 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        cookies.add(cookie);
-
         String header = generateCookieString(cookie);
-        //if we reached here, no exception, cookie is valid
+        // if we reached here, no exception, cookie is valid
         addHeader("Set-Cookie", header, getContext().getCookieProcessor().getCharset());
     }
 
     /**
-     * Special method for adding a session cookie as we should be overriding
-     * any previous.
+     * Special method for adding a session cookie as we should be overriding any previous.
      *
      * @param cookie The new session cookie to add the response
      */
@@ -966,21 +855,10 @@ public class Response implements HttpServletResponse {
     public String generateCookieString(final Cookie cookie) {
         // Web application code can receive a IllegalArgumentException
         // from the generateHeader() invocation
-        if (SecurityUtil.isPackageProtectionEnabled()) {
-            return AccessController.doPrivileged(
-                    new PrivilegedGenerateCookieString(getContext(), cookie, request.getRequest()));
-        } else {
-            return getContext().getCookieProcessor().generateHeader(cookie, request.getRequest());
-        }
+        return getContext().getCookieProcessor().generateHeader(cookie, request.getRequest());
     }
 
 
-    /**
-     * Add the specified date header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Date value to be set
-     */
     @Override
     public void addDateHeader(String name, long value) {
 
@@ -1001,12 +879,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Add the specified header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Value to be set
-     */
     @Override
     public void addHeader(String name, String value) {
         addHeader(name, value, null);
@@ -1028,8 +900,8 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        char cc=name.charAt(0);
-        if (cc=='C' || cc=='c') {
+        char cc = name.charAt(0);
+        if (cc == 'C' || cc == 'c') {
             if (checkSpecialHeader(name, value)) {
                 return;
             }
@@ -1040,12 +912,10 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * An extended version of this exists in {@link org.apache.coyote.Response}.
-     * This check is required here to ensure that the usingWriter check in
-     * {@link #setContentType(String)} is applied since usingWriter is not
-     * visible to {@link org.apache.coyote.Response}
+     * An extended version of this exists in {@link org.apache.coyote.Response}. This check is required here to ensure
+     * that the usingWriter check in {@link #setContentType(String)} is applied since usingWriter is not visible to
+     * {@link org.apache.coyote.Response} Called from set/addHeader.
      *
-     * Called from set/addHeader.
      * @return <code>true</code> if the header is special, no need to set the header.
      */
     private boolean checkSpecialHeader(String name, String value) {
@@ -1057,12 +927,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Add the specified integer header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Integer value to be set
-     */
     @Override
     public void addIntHeader(String name, int value) {
 
@@ -1084,23 +948,17 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Has the specified header been set already in this response?
-     *
-     * @param name Name of the header to check
-     * @return <code>true</code> if the header has been set
-     */
     @Override
     public boolean containsHeader(String name) {
         // Need special handling for Content-Type and Content-Length due to
         // special handling of these in coyoteResponse
-        char cc=name.charAt(0);
-        if(cc=='C' || cc=='c') {
-            if(name.equalsIgnoreCase("Content-Type")) {
+        char cc = name.charAt(0);
+        if (cc == 'C' || cc == 'c') {
+            if (name.equalsIgnoreCase("Content-Type")) {
                 // Will return null if this has not been set
                 return (getCoyoteResponse().getContentType() != null);
             }
-            if(name.equalsIgnoreCase("Content-Length")) {
+            if (name.equalsIgnoreCase("Content-Length")) {
                 // -1 means not known and is not sent to client
                 return (getCoyoteResponse().getContentLengthLong() != -1);
             }
@@ -1111,24 +969,17 @@ public class Response implements HttpServletResponse {
 
 
     @Override
-    public void setTrailerFields(Supplier<Map<String, String>> supplier) {
+    public void setTrailerFields(Supplier<Map<String,String>> supplier) {
         getCoyoteResponse().setTrailerFields(supplier);
     }
 
 
     @Override
-    public Supplier<Map<String, String>> getTrailerFields() {
+    public Supplier<Map<String,String>> getTrailerFields() {
         return getCoyoteResponse().getTrailerFields();
     }
 
 
-    /**
-     * Encode the session identifier associated with this response
-     * into the specified redirect URL, if necessary.
-     *
-     * @param url URL to be encoded
-     * @return <code>true</code> if the URL was encoded
-     */
     @Override
     public String encodeRedirectURL(String url) {
         if (isEncodeable(toAbsolute(url))) {
@@ -1139,13 +990,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Encode the session identifier associated with this response
-     * into the specified URL, if necessary.
-     *
-     * @param url URL to be encoded
-     * @return <code>true</code> if the URL was encoded
-     */
     @Override
     public String encodeURL(String url) {
 
@@ -1175,13 +1019,10 @@ public class Response implements HttpServletResponse {
     /**
      * Send an acknowledgement of a request.
      *
-     * @param continueResponseTiming Indicates when the request for the ACK
-     *                               originated so it can be compared with the
-     *                               configured timing for ACK responses.
-     *
-     * @exception IOException if an input/output error occurs
+     * @param continueResponseTiming Indicates when the request for the ACK originated so it can be compared with the
+     *                                   configured timing for ACK responses.
      */
-    public void sendAcknowledgement(ContinueResponseTiming continueResponseTiming) throws IOException {
+    public void sendAcknowledgement(ContinueResponseTiming continueResponseTiming) {
 
         if (isCommitted()) {
             return;
@@ -1196,38 +1037,32 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Send an error response with the specified status and a
-     * default message.
-     *
-     * @param status HTTP status code to send
-     *
-     * @exception IllegalStateException if this response has
-     *  already been committed
-     * @exception IOException if an input/output error occurs
-     */
+    @Override
+    public void sendEarlyHints() {
+        if (isCommitted()) {
+            return;
+        }
+
+        // Ignore any call from an included servlet
+        if (included) {
+            return;
+        }
+
+        getCoyoteResponse().action(ActionCode.EARLY_HINTS, null);
+    }
+
+
     @Override
     public void sendError(int status) throws IOException {
         sendError(status, null);
     }
 
 
-    /**
-     * Send an error response with the specified status and message.
-     *
-     * @param status HTTP status code to send
-     * @param message Corresponding message to send
-     *
-     * @exception IllegalStateException if this response has
-     *  already been committed
-     * @exception IOException if an input/output error occurs
-     */
     @Override
     public void sendError(int status, String message) throws IOException {
 
         if (isCommitted()) {
-            throw new IllegalStateException
-                (sm.getString("coyoteResponse.sendError.ise"));
+            throw new IllegalStateException(sm.getString("coyoteResponse.sendError.ise"));
         }
 
         // Ignore any call from an included servlet
@@ -1248,31 +1083,8 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Send a temporary redirect to the specified redirect location URL.
-     *
-     * @param location Location URL to redirect to
-     *
-     * @exception IllegalStateException if this response has
-     *  already been committed
-     * @exception IOException if an input/output error occurs
-     */
     @Override
-    public void sendRedirect(String location) throws IOException {
-        sendRedirect(location, SC_FOUND);
-    }
-
-
-    /**
-     * Internal method that allows a redirect to be sent with a status other
-     * than {@link HttpServletResponse#SC_FOUND} (302). No attempt is made to
-     * validate the status code.
-     *
-     * @param location Location URL to redirect to
-     * @param status HTTP status code that will be sent
-     * @throws IOException an IO exception occurred
-     */
-    public void sendRedirect(String location, int status) throws IOException {
+    public void sendRedirect(String location, int status, boolean clearBuffer) throws IOException {
         if (isCommitted()) {
             throw new IllegalStateException(sm.getString("coyoteResponse.sendRedirect.ise"));
         }
@@ -1283,7 +1095,9 @@ public class Response implements HttpServletResponse {
         }
 
         // Clear any data content that has been buffered
-        resetBuffer(true);
+        if (clearBuffer) {
+            resetBuffer(true);
+        }
 
         // Generate a temporary redirect to the specified location
         try {
@@ -1292,7 +1106,7 @@ public class Response implements HttpServletResponse {
             // In this case, the default Tomcat values are assumed, but without
             // reference to org.apache.catalina.STRICT_SERVLET_COMPLIANCE.
             String locationUri;
-            // Relative redirects require HTTP/1.1
+            // Relative redirects require HTTP/1.1 or later
             if (getRequest().getCoyoteRequest().getSupportsRelativeRedirects() &&
                     (context == null || context.getUseRelativeRedirects())) {
                 locationUri = location;
@@ -1301,10 +1115,9 @@ public class Response implements HttpServletResponse {
             }
             setStatus(status);
             setHeader("Location", locationUri);
-            if (context != null && context.getSendRedirectBody()) {
+            if (clearBuffer && context != null && context.getSendRedirectBody()) {
                 PrintWriter writer = getWriter();
-                writer.print(sm.getString("coyoteResponse.sendRedirect.note",
-                        Escape.htmlElementContent(locationUri)));
+                writer.print(sm.getString("coyoteResponse.sendRedirect.note", Escape.htmlElementContent(locationUri)));
                 flushBuffer();
             }
         } catch (IllegalArgumentException e) {
@@ -1317,12 +1130,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the specified date header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Date value to be set
-     */
     @Override
     public void setDateHeader(String name, long value) {
 
@@ -1343,16 +1150,10 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the specified header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Value to be set
-     */
     @Override
     public void setHeader(String name, String value) {
 
-        if (name == null || name.length() == 0 || value == null) {
+        if (name == null || name.length() == 0) {
             return;
         }
 
@@ -1365,8 +1166,8 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        char cc=name.charAt(0);
-        if (cc=='C' || cc=='c') {
+        char cc = name.charAt(0);
+        if (cc == 'C' || cc == 'c') {
             if (checkSpecialHeader(name, value)) {
                 return;
             }
@@ -1376,12 +1177,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the specified integer header to the specified value.
-     *
-     * @param name Name of the header to set
-     * @param value Integer value to be set
-     */
     @Override
     public void setIntHeader(String name, int value) {
 
@@ -1403,11 +1198,6 @@ public class Response implements HttpServletResponse {
     }
 
 
-    /**
-     * Set the HTTP status to be returned with this response.
-     *
-     * @param status The new HTTP status
-     */
     @Override
     public void setStatus(int status) {
 
@@ -1427,17 +1217,16 @@ public class Response implements HttpServletResponse {
     // ------------------------------------------------------ Protected Methods
 
     /**
-     * Return <code>true</code> if the specified URL should be encoded with
-     * a session identifier.  This will be true if all of the following
-     * conditions are met:
+     * Return <code>true</code> if the specified URL should be encoded with a session identifier. This will be true if
+     * all of the following conditions are met:
      * <ul>
      * <li>The request we are responding to asked for a valid session
      * <li>The requested session ID was not received via a cookie
-     * <li>The specified URL points back to somewhere within the web
-     *     application that is responding to this request
+     * <li>The specified URL points back to somewhere within the web application that is responding to this request
      * </ul>
      *
      * @param location Absolute URL to be validated
+     *
      * @return <code>true</code> if the URL should be encoded
      */
     protected boolean isEncodeable(final String location) {
@@ -1462,28 +1251,21 @@ public class Response implements HttpServletResponse {
         }
 
         // Is URL encoding permitted
-        if (!hreq.getServletContext().getEffectiveSessionTrackingModes().
-                contains(SessionTrackingMode.URL)) {
+        if (!hreq.getServletContext().getEffectiveSessionTrackingModes().contains(SessionTrackingMode.URL)) {
             return false;
         }
 
-        if (SecurityUtil.isPackageProtectionEnabled()) {
-            Boolean result =  AccessController.doPrivileged(
-                    new PrivilegedDoIsEncodable(getContext(), hreq, session, location));
-            return result.booleanValue();
-        } else {
-            return doIsEncodeable(getContext(), hreq, session, location);
-        }
+        return doIsEncodeable(getContext(), hreq, session, location);
     }
 
 
-    private static boolean doIsEncodeable(Context context, Request hreq, Session session,
-                                   String location) {
+    private static boolean doIsEncodeable(Context context, Request hreq, Session session, String location) {
         // Is this a valid absolute URL?
         URL url = null;
         try {
-            url = new URL(location);
-        } catch (MalformedURLException e) {
+            URI uri = new URI(location);
+            url = uri.toURL();
+        } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
             return false;
         }
 
@@ -1520,9 +1302,8 @@ public class Response implements HttpServletResponse {
             if (!file.startsWith(contextPath)) {
                 return false;
             }
-            String tok = ";" + SessionConfig.getSessionUriParamName(context) + "=" +
-                    session.getIdInternal();
-            if( file.indexOf(tok, contextPath.length()) >= 0 ) {
+            String tok = ";" + SessionConfig.getSessionUriParamName(context) + "=" + session.getIdInternal();
+            if (file.indexOf(tok, contextPath.length()) >= 0) {
                 return false;
             }
         }
@@ -1534,15 +1315,15 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Convert (if necessary) and return the absolute URL that represents the
-     * resource referenced by this possibly relative URL.  If this URL is
-     * already absolute, return it unchanged.
+     * Convert (if necessary) and return the absolute URL that represents the resource referenced by this possibly
+     * relative URL. If this URL is already absolute, return it unchanged.
      *
      * @param location URL to be (possibly) converted and then returned
+     *
      * @return the encoded URL
      *
-     * @exception IllegalArgumentException if a MalformedURLException is
-     *  thrown when converting the relative URL to an absolute one
+     * @exception IllegalArgumentException if a MalformedURLException is thrown when converting the relative URL to an
+     *                                         absolute one
      */
     protected String toAbsolute(String location) {
 
@@ -1578,8 +1359,7 @@ public class Response implements HttpServletResponse {
                 redirectURLCC.append(scheme, 0, scheme.length());
                 redirectURLCC.append("://", 0, 3);
                 redirectURLCC.append(name, 0, name.length());
-                if ((scheme.equals("http") && port != 80)
-                    || (scheme.equals("https") && port != 443)) {
+                if ((scheme.equals("http") && port != 80) || (scheme.equals("https") && port != 443)) {
                     redirectURLCC.append(':');
                     String portS = port + "";
                     redirectURLCC.append(portS, 0, portS.length());
@@ -1587,17 +1367,7 @@ public class Response implements HttpServletResponse {
                 if (!leadingSlash) {
                     String relativePath = request.getDecodedRequestURI();
                     int pos = relativePath.lastIndexOf('/');
-                    CharChunk encodedURI = null;
-                    if (SecurityUtil.isPackageProtectionEnabled() ){
-                        try{
-                            encodedURI = AccessController.doPrivileged(
-                                    new PrivilegedEncodeUrl(urlEncoder, relativePath, pos));
-                        } catch (PrivilegedActionException pae){
-                            throw new IllegalArgumentException(location, pae.getException());
-                        }
-                    } else {
-                        encodedURI = urlEncoder.encodeURL(relativePath, 0, pos);
-                    }
+                    CharChunk encodedURI = urlEncoder.encodeURL(relativePath, 0, pos);
                     redirectURLCC.append(encodedURI);
                     encodedURI.recycle();
                     redirectURLCC.append('/');
@@ -1620,8 +1390,7 @@ public class Response implements HttpServletResponse {
     }
 
     /**
-     * Removes /./ and /../ sequences from absolute URLs.
-     * Code borrowed heavily from CoyoteAdapter.normalize()
+     * Removes /./ and /../ sequences from absolute URLs. Code borrowed heavily from CoyoteAdapter.normalize()
      *
      * @param cc the char chunk containing the chars to normalize
      */
@@ -1634,8 +1403,7 @@ public class Response implements HttpServletResponse {
         }
         char[] truncateCC = null;
         if (truncate > -1) {
-            truncateCC = Arrays.copyOfRange(cc.getBuffer(),
-                    cc.getStart() + truncate, cc.getEnd());
+            truncateCC = Arrays.copyOfRange(cc.getBuffer(), cc.getStart() + truncate, cc.getEnd());
             cc.setEnd(cc.getStart() + truncate);
         }
 
@@ -1667,8 +1435,7 @@ public class Response implements HttpServletResponse {
             if (index < 0) {
                 break;
             }
-            copyChars(c, start + index, start + index + 2,
-                      end - start - index - 2);
+            copyChars(c, start + index, start + index + 2, end - start - index - 2);
             end = end - 2;
             cc.setEnd(end);
         }
@@ -1686,13 +1453,12 @@ public class Response implements HttpServletResponse {
                 throw new IllegalArgumentException();
             }
             int index2 = -1;
-            for (pos = start + index - 1; (pos >= 0) && (index2 < 0); pos --) {
+            for (pos = start + index - 1; (pos >= 0) && (index2 < 0); pos--) {
                 if (c[pos] == (byte) '/') {
                     index2 = pos;
                 }
             }
-            copyChars(c, start + index2, start + index + 3,
-                      end - start - index - 3);
+            copyChars(c, start + index2, start + index + 3, end - start - index - 3);
             end = end + index2 - index - 3;
             cc.setEnd(end);
             index = index2;
@@ -1717,6 +1483,7 @@ public class Response implements HttpServletResponse {
      * Determine if an absolute URL has a path component.
      *
      * @param uri the URL that will be checked
+     *
      * @return <code>true</code> if the URL has a path
      */
     private boolean hasPath(String uri) {
@@ -1732,15 +1499,15 @@ public class Response implements HttpServletResponse {
     }
 
     /**
-     * Return the specified URL with the specified session identifier
-     * suitably encoded.
+     * Return the specified URL with the specified session identifier suitably encoded.
      *
-     * @param url URL to be encoded with the session id
+     * @param url       URL to be encoded with the session id
      * @param sessionId Session id to be included in the encoded URL
+     *
      * @return the encoded URL
      */
     protected String toEncoded(String url, String sessionId) {
-        if ((url == null) || (sessionId == null)) {
+        if (url == null || sessionId == null) {
             return url;
         }
 
@@ -1758,75 +1525,14 @@ public class Response implements HttpServletResponse {
             path = path.substring(0, pound);
         }
         StringBuilder sb = new StringBuilder(path);
-        if( sb.length() > 0 ) { // jsessionid can't be first.
+        if (sb.length() > 0) { // jsessionid can't be first.
             sb.append(';');
-            sb.append(SessionConfig.getSessionUriParamName(
-                    request.getContext()));
+            sb.append(SessionConfig.getSessionUriParamName(request.getContext()));
             sb.append('=');
             sb.append(sessionId);
         }
         sb.append(anchor);
         sb.append(query);
         return sb.toString();
-    }
-
-
-    private static class PrivilegedGenerateCookieString implements PrivilegedAction<String> {
-
-        private final Context context;
-        private final Cookie cookie;
-        private final HttpServletRequest request;
-
-        public PrivilegedGenerateCookieString(Context context, Cookie cookie, HttpServletRequest request) {
-            this.context = context;
-            this.cookie = cookie;
-            this.request = request;
-        }
-
-        @Override
-        public String run(){
-            return context.getCookieProcessor().generateHeader(cookie, request);
-        }
-    }
-
-
-    private static class PrivilegedDoIsEncodable implements PrivilegedAction<Boolean> {
-
-        private final Context context;
-        private final Request hreq;
-        private final Session session;
-        private final String location;
-
-        public PrivilegedDoIsEncodable(Context context, Request hreq, Session session,
-                String location) {
-            this.context = context;
-            this.hreq = hreq;
-            this.session = session;
-            this.location = location;
-        }
-
-        @Override
-        public Boolean run(){
-            return Boolean.valueOf(doIsEncodeable(context, hreq, session, location));
-        }
-    }
-
-
-    private static class PrivilegedEncodeUrl implements PrivilegedExceptionAction<CharChunk> {
-
-        private final UEncoder urlEncoder;
-        private final String relativePath;
-        private final int end;
-
-        public PrivilegedEncodeUrl(UEncoder urlEncoder, String relativePath, int end) {
-            this.urlEncoder = urlEncoder;
-            this.relativePath = relativePath;
-            this.end = end;
-        }
-
-        @Override
-        public CharChunk run() throws IOException{
-            return urlEncoder.encodeURL(relativePath, 0, end);
-        }
     }
 }
