@@ -19,12 +19,11 @@ package org.apache.catalina.webresources;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -52,14 +51,13 @@ import org.apache.tomcat.util.res.StringManager;
 
 /**
  * <p>
- * Provides the resources implementation for a web application. The
- * {@link org.apache.catalina.Lifecycle} of this class should be aligned with
- * that of the associated {@link Context}.
- * </p><p>
- * This implementation assumes that the base attribute supplied to {@link
- * StandardRoot#createWebResourceSet(
- * org.apache.catalina.WebResourceRoot.ResourceSetType, String, String, String,
- * String)} represents the absolute path to a file.
+ * Provides the resources implementation for a web application. The {@link org.apache.catalina.Lifecycle} of this class
+ * should be aligned with that of the associated {@link Context}.
+ * </p>
+ * <p>
+ * This implementation assumes that the base attribute supplied to
+ * {@link StandardRoot#createWebResourceSet( org.apache.catalina.WebResourceRoot.ResourceSetType, String, String, String, String)}
+ * represents the absolute path to a file.
  * </p>
  */
 public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot {
@@ -80,13 +78,13 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     private ObjectName cacheJmxName = null;
 
     private boolean trackLockedFiles = false;
-    private final Set<TrackedWebResource> trackedResources =
-            Collections.newSetFromMap(new ConcurrentHashMap<>());
+    private final Set<TrackedWebResource> trackedResources = ConcurrentHashMap.newKeySet();
+
+    private ArchiveIndexStrategy archiveIndexStrategy = ArchiveIndexStrategy.SIMPLE;
 
     // Constructs to make iteration over all WebResourceSets simpler
     private final List<WebResourceSet> mainResources = new ArrayList<>();
-    private final List<List<WebResourceSet>> allResources =
-            new ArrayList<>();
+    private final List<List<WebResourceSet>> allResources = new ArrayList<>();
     {
         allResources.add(preResources);
         allResources.add(mainResources);
@@ -97,10 +95,8 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
 
     /**
-     * Creates a new standard implementation of {@link WebResourceRoot}. A no
-     * argument constructor is required for this to work with the digester.
-     * {@link #setContext(Context)} must be called before this component is
-     * initialized.
+     * Creates a new standard implementation of {@link WebResourceRoot}. A no argument constructor is required for this
+     * to work with the digester. {@link #setContext(Context)} must be called before this component is initialized.
      */
     public StandardRoot() {
         // NO-OP
@@ -206,8 +202,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return getResource(path, true, false);
     }
 
-    protected WebResource getResource(String path, boolean validate,
-            boolean useClassLoaderResources) {
+    protected WebResource getResource(String path, boolean validate, boolean useClassLoaderResources) {
         if (validate) {
             path = validate(path);
         }
@@ -233,22 +228,20 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
 
     /**
-     * Ensures that this object is in a valid state to serve resources, checks
-     * that the path is a String that starts with '/' and checks that the path
-     * can be normalized without stepping outside of the root.
+     * Ensures that this object is in a valid state to serve resources, checks that the path is a String that starts
+     * with '/' and checks that the path can be normalized without stepping outside of the root.
      *
      * @param path The path to validate
-     * @return  the normalized path
+     *
+     * @return the normalized path
      */
     private String validate(String path) {
         if (!getState().isAvailable()) {
-            throw new IllegalStateException(
-                    sm.getString("standardRoot.checkStateNotStarted"));
+            throw new IllegalStateException(sm.getString("standardRoot.checkStateNotStarted"));
         }
 
         if (path == null || path.length() == 0 || !path.startsWith("/")) {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.invalidPath", path));
+            throw new IllegalArgumentException(sm.getString("standardRoot.invalidPath", path));
         }
 
         String result;
@@ -262,21 +255,19 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
             result = RequestUtil.normalize(path, false);
         }
         if (result == null || result.length() == 0 || !result.startsWith("/")) {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.invalidPathNormal", path, result));
+            throw new IllegalArgumentException(sm.getString("standardRoot.invalidPathNormal", path, result));
         }
 
         return result;
     }
 
-    protected final WebResource getResourceInternal(String path,
-            boolean useClassLoaderResources) {
+    protected final WebResource getResourceInternal(String path, boolean useClassLoaderResources) {
         WebResource result = null;
         WebResource virtual = null;
         WebResource mainEmpty = null;
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
-                if (!useClassLoaderResources &&  !webResourceSet.getClassLoaderOnly() ||
+                if (!useClassLoaderResources && !webResourceSet.getClassLoaderOnly() ||
                         useClassLoaderResources && !webResourceSet.getStaticOnly()) {
                     result = webResourceSet.getResource(path);
                     if (result.exists()) {
@@ -307,8 +298,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return getResources(path, false);
     }
 
-    private WebResource[] getResources(String path,
-            boolean useClassLoaderResources) {
+    private WebResource[] getResources(String path, boolean useClassLoaderResources) {
         path = validate(path);
 
         if (isCachingAllowed()) {
@@ -318,8 +308,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         }
     }
 
-    protected WebResource[] getResourcesInternal(String path,
-            boolean useClassLoaderResources) {
+    protected WebResource[] getResourcesInternal(String path, boolean useClassLoaderResources) {
         List<WebResource> result = new ArrayList<>();
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
@@ -362,19 +351,18 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
     // TODO: Should the createWebResourceSet() methods be removed to some
-    //       utility class for file system based resource sets?
+    // utility class for file system based resource sets?
 
     @Override
-    public void createWebResourceSet(ResourceSetType type, String webAppMount,
-            URL url, String internalPath) {
+    public void createWebResourceSet(ResourceSetType type, String webAppMount, URL url, String internalPath) {
         BaseLocation baseLocation = new BaseLocation(url);
-        createWebResourceSet(type, webAppMount, baseLocation.getBasePath(),
-                baseLocation.getArchivePath(), internalPath);
+        createWebResourceSet(type, webAppMount, baseLocation.getBasePath(), baseLocation.getArchivePath(),
+                internalPath);
     }
 
     @Override
-    public void createWebResourceSet(ResourceSetType type, String webAppMount,
-            String base, String archivePath, String internalPath) {
+    public void createWebResourceSet(ResourceSetType type, String webAppMount, String base, String archivePath,
+            String internalPath) {
         List<WebResourceSet> resourceList;
         WebResourceSet resourceSet;
 
@@ -392,8 +380,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 resourceList = postResources;
                 break;
             default:
-                throw new IllegalArgumentException(
-                        sm.getString("standardRoot.createUnknownType", type));
+                throw new IllegalArgumentException(sm.getString("standardRoot.createUnknownType", type));
         }
 
         // This implementation assumes that the base for all resources will be a
@@ -403,21 +390,16 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         if (file.isFile()) {
             if (archivePath != null) {
                 // Must be a JAR nested inside a WAR if archivePath is non-null
-                resourceSet = new JarWarResourceSet(this, webAppMount, base,
-                        archivePath, internalPath);
+                resourceSet = new JarWarResourceSet(this, webAppMount, base, archivePath, internalPath);
             } else if (file.getName().toLowerCase(Locale.ENGLISH).endsWith(".jar")) {
-                resourceSet = new JarResourceSet(this, webAppMount, base,
-                        internalPath);
+                resourceSet = new JarResourceSet(this, webAppMount, base, internalPath);
             } else {
-                resourceSet = new FileResourceSet(this, webAppMount, base,
-                        internalPath);
+                resourceSet = new FileResourceSet(this, webAppMount, base, internalPath);
             }
         } else if (file.isDirectory()) {
-            resourceSet =
-                    new DirResourceSet(this, webAppMount, base, internalPath);
+            resourceSet = new DirResourceSet(this, webAppMount, base, internalPath);
         } else {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.createInvalidFile", file));
+            throw new IllegalArgumentException(sm.getString("standardRoot.createInvalidFile", file));
         }
 
         if (type.equals(ResourceSetType.CLASSES_JAR)) {
@@ -557,6 +539,21 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return trackLockedFiles;
     }
 
+    @Override
+    public void setArchiveIndexStrategy(String archiveIndexStrategy) {
+        this.archiveIndexStrategy = ArchiveIndexStrategy.valueOf(archiveIndexStrategy.toUpperCase(Locale.ENGLISH));
+    }
+
+    @Override
+    public String getArchiveIndexStrategy() {
+        return this.archiveIndexStrategy.name();
+    }
+
+    @Override
+    public ArchiveIndexStrategy getArchiveIndexStrategyEnum() {
+        return this.archiveIndexStrategy;
+    }
+
     public List<String> getTrackedResources() {
         List<String> result = new ArrayList<>(trackedResources.size());
         for (TrackedWebResource resource : trackedResources) {
@@ -576,32 +573,27 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
     /**
-     * Class loader resources are handled by treating JARs in WEB-INF/lib as
-     * resource JARs (without the internal META-INF/resources/ prefix) mounted
-     * at WEB-INF/classes (rather than the web app root). This enables reuse
-     * of the resource handling plumbing.
+     * Class loader resources are handled by treating JARs in WEB-INF/lib as resource JARs (without the internal
+     * META-INF/resources/ prefix) mounted at WEB-INF/classes (rather than the web app root). This enables reuse of the
+     * resource handling plumbing. These resources are marked as class loader only so they are only used in the methods
+     * that are explicitly defined to return class loader resources. This prevents calls to
+     * getResource("/WEB-INF/classes") returning from one or more of the JAR files.
      *
-     * These resources are marked as class loader only so they are only used in
-     * the methods that are explicitly defined to return class loader resources.
-     * This prevents calls to getResource("/WEB-INF/classes") returning from one
-     * or more of the JAR files.
-     *
-     * @throws LifecycleException If an error occurs that should stop the web
-     *                            application from starting
+     * @throws LifecycleException If an error occurs that should stop the web application from starting
      */
     protected void processWebInfLib() throws LifecycleException {
         WebResource[] possibleJars = listResources("/WEB-INF/lib", false);
 
         for (WebResource possibleJar : possibleJars) {
             if (possibleJar.isFile() && possibleJar.getName().endsWith(".jar")) {
-                createWebResourceSet(ResourceSetType.CLASSES_JAR,
-                        "/WEB-INF/classes", possibleJar.getURL(), "/");
+                createWebResourceSet(ResourceSetType.CLASSES_JAR, "/WEB-INF/classes", possibleJar.getURL(), "/");
             }
         }
     }
 
     /**
      * For unit testing.
+     *
      * @param main The main resources
      */
     protected final void setMainResources(WebResourceSet main) {
@@ -616,7 +608,6 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         cache.backgroundProcess();
         gc();
     }
-
 
 
     @Override
@@ -657,11 +648,9 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
 
-
     /*
-     * Returns true if and only if all the resources for this web application
-     * are provided via a packed WAR file. It is used to optimise cache
-     * validation in this case on the basis that the WAR file will not change.
+     * Returns true if and only if all the resources for this web application are provided via a packed WAR file. It is
+     * used to optimise cache validation in this case on the basis that the WAR file will not change.
      */
     protected boolean isPackedWarFile() {
         return main instanceof WarResourceSet && preResources.isEmpty() && postResources.isEmpty();
@@ -689,8 +678,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         super.initInternal();
 
         if (context == null) {
-            throw new IllegalStateException(
-                    sm.getString("standardRoot.noContext"));
+            throw new IllegalStateException(sm.getString("standardRoot.noContext"));
         }
 
         cacheJmxName = register(cache, getObjectNameKeyProperties() + ",name=Cache");
@@ -751,16 +739,14 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         } else {
             File f = new File(docBase);
             if (!f.isAbsolute()) {
-                f = new File(((Host)context.getParent()).getAppBaseFile(), f.getPath());
+                f = new File(((Host) context.getParent()).getAppBaseFile(), f.getPath());
             }
             if (f.isDirectory()) {
                 mainResourceSet = new DirResourceSet(this, "/", f.getAbsolutePath(), "/");
-            } else if(f.isFile() && docBase.endsWith(".war")) {
+            } else if (f.isFile() && docBase.endsWith(".war")) {
                 mainResourceSet = new WarResourceSet(this, "/", f.getAbsolutePath());
             } else {
-                throw new IllegalArgumentException(
-                        sm.getString("standardRoot.startInvalidMain",
-                                f.getAbsolutePath()));
+                throw new IllegalArgumentException(sm.getString("standardRoot.startInvalidMain", f.getAbsolutePath()));
             }
         }
 
@@ -791,9 +777,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         classResources.clear();
 
         for (TrackedWebResource trackedResource : trackedResources) {
-            log.error(sm.getString("standardRoot.lockedFile",
-                    context.getName(),
-                    trackedResource.getName()),
+            log.error(sm.getString("standardRoot.lockedFile", context.getName(), trackedResource.getName()),
                     trackedResource.getCreatedBy());
             try {
                 trackedResource.close();
@@ -839,17 +823,17 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 }
                 String fileUrl = jarUrl.substring(4, endOfFileUrl);
                 try {
-                    f = new File(new URL(fileUrl).toURI());
-                } catch (MalformedURLException | URISyntaxException e) {
+                    f = new File(new URI(fileUrl));
+                } catch (URISyntaxException e) {
                     throw new IllegalArgumentException(e);
                 }
                 int startOfArchivePath = endOfFileUrl + 2;
-                if (jarUrl.length() >  startOfArchivePath) {
+                if (jarUrl.length() > startOfArchivePath) {
                     archivePath = jarUrl.substring(startOfArchivePath);
                 } else {
                     archivePath = null;
                 }
-            } else if ("file".equals(url.getProtocol())){
+            } else if ("file".equals(url.getProtocol())) {
                 try {
                     f = new File(url.toURI());
                 } catch (URISyntaxException e) {
@@ -857,8 +841,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 }
                 archivePath = null;
             } else {
-                throw new IllegalArgumentException(sm.getString(
-                        "standardRoot.unsupportedProtocol", url.getProtocol()));
+                throw new IllegalArgumentException(sm.getString("standardRoot.unsupportedProtocol", url.getProtocol()));
             }
 
             basePath = f.getAbsolutePath();
