@@ -23,6 +23,7 @@ import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.JarURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Map;
@@ -266,9 +267,9 @@ public abstract class Compiler {
             // to be GC'd and save memory.
             ctxt.setWriter(null);
 
-            if (log.isDebugEnabled()) {
+            if (log.isTraceEnabled()) {
                 t4 = System.currentTimeMillis();
-                log.debug("Generated " + javaFileName + " total=" + (t4 - t1)
+                log.trace("Generated " + javaFileName + " total=" + (t4 - t1)
                         + " generate=" + (t4 - t3) + " validate=" + (t2 - t1));
             }
 
@@ -493,8 +494,8 @@ public abstract class Compiler {
         }
 
         if (targetLastModified != jspRealLastModified.longValue()) {
-            if (log.isDebugEnabled()) {
-                log.debug("Compiler: outdated: " + targetFile + " "
+            if (log.isTraceEnabled()) {
+                log.trace("Compiler: outdated: " + targetFile + " "
                         + targetLastModified);
             }
             return true;
@@ -520,12 +521,12 @@ public abstract class Compiler {
                     // Assume we constructed this correctly
                     int entryStart = key.lastIndexOf("!/");
                     String entry = key.substring(entryStart + 2);
-                    try (Jar jar = JarFactory.newInstance(new URL(key.substring(4, entryStart)))) {
+                    try (Jar jar = JarFactory.newInstance(new URI(key.substring(4, entryStart)).toURL())) {
                         includeLastModified = jar.getLastModified(entry);
                     }
                 } else {
                     if (key.startsWith("jar:") || key.startsWith("file:")) {
-                        includeUrl = new URL(key);
+                        includeUrl = new URI(key).toURL();
                     } else {
                         includeUrl = ctxt.getResource(include.getKey());
                     }
@@ -547,8 +548,7 @@ public abstract class Compiler {
                 }
             } catch (Exception e) {
                 if (log.isDebugEnabled()) {
-                    log.debug("Problem accessing resource. Treat as outdated.",
-                            e);
+                    log.debug(Localizer.getMessage("jsp.error.compiler.missingResource"), e);
                 }
                 return true;
             }
@@ -584,8 +584,8 @@ public abstract class Compiler {
 
         try {
             File javaFile = new File(ctxt.getServletJavaFileName());
-            if (log.isDebugEnabled()) {
-                log.debug("Deleting " + javaFile);
+            if (log.isTraceEnabled()) {
+                log.trace("Deleting " + javaFile);
             }
             if (javaFile.exists()) {
                 if (!javaFile.delete()) {
@@ -604,8 +604,8 @@ public abstract class Compiler {
     public void removeGeneratedClassFiles() {
         try {
             File classFile = new File(ctxt.getClassFileName());
-            if (log.isDebugEnabled()) {
-                log.debug("Deleting " + classFile);
+            if (log.isTraceEnabled()) {
+                log.trace("Deleting " + classFile);
             }
             if (classFile.exists()) {
                 if (!classFile.delete()) {
