@@ -17,6 +17,7 @@
 package org.apache.catalina.startup;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collection;
@@ -82,7 +83,7 @@ public class TestWebappServiceLoader {
     @Test
     @SuppressWarnings("unchecked")
     public void testInitializerFromClasspath() throws IOException {
-        URL url = new URL("file://test");
+        URL url = URI.create("file://test").toURL();
         loader = EasyMock.createMockBuilder(WebappServiceLoader.class)
                 .addMockedMethod("parseConfigFile", LinkedHashSet.class, URL.class)
                 .withConstructor(context).createMock(control);
@@ -101,10 +102,10 @@ public class TestWebappServiceLoader {
     @Test
     @SuppressWarnings("unchecked")
     public void testWithOrdering() throws IOException {
-        URL url1 = new URL("file://jar1.jar");
-        URL sci1 = new URL("jar:file://jar1.jar!/" + CONFIG_FILE);
-        URL url2 = new URL("file://dir/");
-        URL sci2 = new URL("file://dir/" + CONFIG_FILE);
+        URL url1 = URI.create("file://jar1.jar").toURL();
+        URL sci1 = URI.create("jar:file://jar1.jar!/" + CONFIG_FILE).toURL();
+        URL url2 = URI.create("file://dir/").toURL();
+        URL sci2 = URI.create("file://dir/" + CONFIG_FILE).toURL();
         loader = EasyMock.createMockBuilder(WebappServiceLoader.class)
                 .addMockedMethod("parseConfigFile", LinkedHashSet.class, URL.class)
                 .withConstructor(context).createMock(control);
@@ -195,7 +196,7 @@ public class TestWebappServiceLoader {
         private final ClassLoader parent;
         private final WebResourceRoot resources;
 
-        public ExtendedTesterContext(ServletContext servletContext, ClassLoader parent) {
+        ExtendedTesterContext(ServletContext servletContext, ClassLoader parent) {
             this.servletContext = servletContext;
             this.parent = parent;
             // Empty resources - any non-null returns will be mocked on the
